Change the look and feel (#13)
This PR brings much better look and feel base on https://tailwindui.com/components/application-ui/application-shells/stacked

--- a/clients/web/src/template.html
+++ b/clients/web/src/template.html
@@ -26,7 +26,7 @@
 	     the current page has one -->
 	%sapper.head%
 </head>
-<body>
+<body class="bg-gray-800 font-sans leading-normal tracking-normal mt-12">
 	<!-- The application will be rendered inside this element,
 	     because `src/client.js` references it -->
 	<div id="sapper">%sapper.html%</div>
