some basic docs

--- a/clients/admin/public/index.html
+++ b/clients/admin/public/index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8" />
         <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="ERPJS" />
+        <meta name="description" content="EolERP" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" />
-        <title>ERPJS 3 - Admin</title>
+        <title>EolERP 3 - Admin</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
