--- a/clients/admin/public/index.html
+++ b/clients/admin/public/index.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="EolERP" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500|Material+Icons&display=swap"
+              rel="stylesheet" />
         <title>EolERP 3 - Admin</title>
     </head>
     <body>
